# stencil

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.agents/skills/financial-report-generator/: SKILL.md
.github/: dependabot.yml
.github/workflows/: publish.yml
.ua/: .understandignore  fingerprints.json  meta.json
.ua/.trash-1784286105/: assemble-review.json  assembled-graph.json  batch-1.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batches.json  fingerprint-input.json  layers.json  review.json  tour.json
.ua/.trash-1784286105/tmp/: build-batch-1.mjs  ua-arch-analyze.js  ua-arch-input.json  ua-arch-prepare.js  ua-arch-results.json  ua-assemble-final.cjs  ua-file-analyzer-input-1.json  ua-file-analyzer-input-2.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-4.json  ua-file-analyzer-input-5.json  ua-file-analyzer-input-6.json  ua-file-extract-results-1.json  ua-file-extract-results-2.json  ua-file-extract-results-3.json  ua-file-extract-results-4.json  ua-file-extract-results-5.json  ua-file-extract-results-6.json  ua-import-map-input.json  ua-import-map-output.json  ua-inline-validate.cjs  ua-phase7.cjs  ua-scan-files.json  (+4 more)
.ua/.trash-1784419400/: assemble-review.json  assembled-graph.json  batch-6.json  batch-existing.json  batches.json  fingerprint-input.json  review.json  tour.json
examples/: README.md
examples/data/: invoice.json  pptx-status.json  status-report.json
examples/scripts/: create_pptx_status_template.py  create_styled_status_template.py  render_styled_status_pdf.py
examples/templates/: invoice.docx  pptx-status.pptx  styled-status-report.docx
guides/: python-package-cicd-agent-guide.md
src/stencil/: __init__.py  _version.py  api.py  cli.py  docx.py  errors.py  pdf.py  pptx.py  render.py  xlsx.py
tests/: test_api.py  test_render.py
(+30 files in other folders)
