[project]
name = "office-stencil"
version = "0.2.0"
description = "A reusable Office document template render engine for DOCX, XLSX, and PPTX."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Bin Zhang" },
]
keywords = [
    "stencil",
    "templates",
    "docx",
    "xlsx",
    "pptx",
    "office",
    "documents",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "docxtpl>=0.16.8",
    "jinja2>=3.1.0",
    "lxml>=5.0.0",
    "openpyxl>=3.1.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
workers = [
    "celery>=5.4.0",
    "redis>=5.0.0",
    "rq>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
stencil = "stencil.cli:app"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stencil"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["stencil"]

[[tool.mypy.overrides]]
module = ["docxtpl"]
ignore_missing_imports = true
